Fixed a bug where letters with descenders would be clipped at the very bottom

--- a/post/public/css/index.css
+++ b/post/public/css/index.css
@@ -231,7 +231,8 @@ h2.section {
   font-weight: bold;
   font-style: italic;
   font-size: 17px;
-  margin-bottom: 7px;
+  height: 18px;
+  margin-bottom: 6px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
